Fixed bug #55524 Traits should not be able to extend a class # also used the Z_STRVAL where it seemed appropriate